Average the phi_gradient_xy from both Runge-Kutta passes to match the time_of_arrival for newly burned cells

--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -10543,14 +10543,18 @@ def runge_kutta_pass2(dy                : cy.float,
         # NOTE: Phi can only ever decrease, and cells with negative phi are on fire.
         #       Therefore, if phi_old and phi_new are of opposite signs, the cell has just burned.
         if (phi_old * phi_new) < 0.0:
-            time_of_arrival: cy.float = start_time + dt * phi_old / (phi_old - phi_new)
-            # FIXME: Here we set phi_gradient_xy to be the phi gradient from the 1st pass.
-            #        However, to be consistent with the time_of_arrival, we might want to
-            #        average this with the phi_gradient_xy from the 2nd pass.
+            preburn_weight          : cy.float = phi_old / (phi_old - phi_new)
+            postburn_weight         : cy.float = 1.0 - preburn_weight
+            time_of_arrival         : cy.float = start_time + dt * preburn_weight
+            phi_gradient_xy_pass1   : vec_xy   = pass1_cache[i].phi_gradient_xy
+            dphi_dx_pass1           : cy.float = phi_gradient_xy_pass1[0]
+            dphi_dy_pass1           : cy.float = phi_gradient_xy_pass1[1]
+            phi_gradient_xy_combined: vec_xy   = (dphi_dx_pass1 * postburn_weight + dphi_dx * preburn_weight,
+                                                  dphi_dy_pass1 * postburn_weight + dphi_dy * preburn_weight)
             burned_cells.append(
                 new_BurnedCellInfo(cell_index      = cell_index,
                                    time_of_arrival = time_of_arrival,
-                                   phi_gradient_xy = pass1_cache[i].phi_gradient_xy,
+                                   phi_gradient_xy = phi_gradient_xy_combined,
                                    from_spotting   = False)
             )
     return burned_cells
@@ -11332,16 +11336,16 @@ Fire Type (0=unburned, 1=surface, 2=passive_crown, 3=active_crown)
 {'Min': 1, 'Max': 1, 'Mean': 1.0, 'Stdev': 0.0}
 
 Spread Rate (m/min)
-{'Min': 0.16077131, 'Max': 2.2964673, 'Mean': 1.2116312, 'Stdev': 0.6338168}
+{'Min': 0.16077128, 'Max': 2.2963135, 'Mean': 1.1945546, 'Stdev': 0.625517}
 
 Spread Direction (degrees clockwise from North)
-{'Min': 0.12497545, 'Max': 359.51932, 'Mean': 192.26268, 'Stdev': 117.77033}
+{'Min': 1.9940022, 'Max': 359.45844, 'Mean': 195.13614, 'Stdev': 116.97418}
 
 Fireline Intensity (kW/m)
-{'Min': 2.277241, 'Max': 32.52825, 'Mean': 17.162119, 'Stdev': 8.977682}
+{'Min': 2.2772405, 'Max': 32.526073, 'Mean': 16.920237, 'Stdev': 8.86012}
 
 Flame Length (meters)
-{'Min': 0.11312121, 'Max': 0.38439333, 'Mean': 0.27523533, 'Stdev': 0.07356613}
+{'Min': 0.113121204, 'Max': 0.3843815, 'Mean': 0.2734997, 'Stdev': 0.07289634}
 
 Time of Arrival (minutes)
 {'Min': 2081.852, 'Max': 2547.9133, 'Mean': 2385.5022, 'Stdev': 116.77271}
@@ -11663,75 +11667,96 @@ Stop Time: 2550.0 (minutes)
 Stop Condition: max duration reached
 
 Phi (phi <= 0: burned, phi > 0: unburned
-{'Min': -1.0, 'Max': 1.0, 'Mean': 0.73885256, 'Stdev': 0.61126536}
+{'Min': -0.99851185, 'Max': 1.0, 'Mean': 0.72060555, 'Stdev': 0.6200823}
 
 Fire Type (0=unburned, 1=surface, 2=passive_crown, 3=active_crown)
 {'Min': 1, 'Max': 1, 'Mean': 1.0, 'Stdev': 0.0}
 
 Spread Rate (m/min)
-{'Min': 0.1605582, 'Max': 2.296455, 'Mean': 1.3731884, 'Stdev': 0.66230774}
+{'Min': 0.16076808, 'Max': 2.2964642, 'Mean': 1.3380439, 'Stdev': 0.65815914}
 
 Spread Direction (degrees clockwise from North)
-{'Min': 0.12497545, 'Max': 359.96307, 'Mean': 180.6012, 'Stdev': 125.7165}
+{'Min': 0.008171321, 'Max': 359.93277, 'Mean': 183.86234, 'Stdev': 124.12513}
 
 Fireline Intensity (kW/m)
-{'Min': 2.2742224, 'Max': 32.528076, 'Mean': 19.450493, 'Stdev': 9.381241}
+{'Min': 2.2771952, 'Max': 32.528206, 'Mean': 18.952688, 'Stdev': 9.322478}
 
 Flame Length (meters)
-{'Min': 0.11305221, 'Max': 0.38439238, 'Mean': 0.2921405, 'Stdev': 0.07622042}
+{'Min': 0.11312017, 'Max': 0.3843931, 'Mean': 0.2884106, 'Stdev': 0.07616116}
 
 Time of Arrival (minutes)
-{'Min': 2081.852, 'Max': 2549.8206, 'Mean': 2406.426, 'Stdev': 99.674736}
+{'Min': 2081.852, 'Max': 2549.9414, 'Mean': 2414.803, 'Stdev': 100.192955}
 
 Future Spot Ignitions:
-{2550.881103515625: {(80, 36)},
- 2552.015625: {(67, 35)},
- 2552.82763671875: {(73, 30)},
- 2553.318603515625: {(86, 61), (86, 57)},
- 2553.742431640625: {(83, 21)},
- 2553.755859375: {(58, 73)},
- 2554.1259765625: {(85, 24), (82, 30)},
- 2555.26318359375: {(74, 74)},
- 2555.499267578125: {(80, 73)},
- 2556.433837890625: {(82, 24)},
- 2556.76953125: {(86, 56)},
- 2557.221435546875: {(83, 65), (91, 70)},
- 2558.892578125: {(82, 63)},
- 2559.96044921875: {(47, 50)},
- 2560.7099609375: {(85, 30)},
- 2561.644775390625: {(86, 58)},
- 2562.282470703125: {(89, 46)},
- 2565.146240234375: {(90, 39)},
- 2566.47998046875: {(83, 32)},
- 2566.483154296875: {(87, 53)},
- 2566.6533203125: {(79, 81), (79, 76)},
- 2568.689697265625: {(98, 48)},
- 2568.84228515625: {(65, 78)},
- 2569.245849609375: {(90, 41)},
- 2570.54345703125: {(82, 64)},
- 2571.021240234375: {(82, 57)},
- 2571.06640625: {(86, 34)},
- 2571.98388671875: {(62, 77)},
- 2572.31103515625: {(94, 55)},
- 2572.808837890625: {(85, 74), (89, 71)},
- 2572.984130859375: {(83, 63)},
- 2573.141357421875: {(62, 27)},
- 2574.059326171875: {(50, 43)},
- 2574.989990234375: {(88, 35)},
- 2575.57958984375: {(86, 54), (87, 59)},
- 2576.198974609375: {(89, 53)},
- 2577.04248046875: {(85, 34)},
- 2577.150146484375: {(74, 73)},
- 2577.362548828125: {(53, 68), (54, 66)},
- 2579.9619140625: {(82, 74)},
- 2581.1455078125: {(92, 48)},
- 2581.962646484375: {(97, 37)},
- 2582.848876953125: {(79, 75), (79, 76)},
- 2583.228271484375: {(60, 30)},
- 2584.211669921875: {(97, 60)},
- 2587.57763671875: {(66, 78)},
- 2589.155517578125: {(92, 48)},
- 2592.04296875: {(57, 30)}}
+{2550.62060546875: {(82, 34)},
+ 2550.910888671875: {(82, 55)},
+ 2551.283203125: {(70, 80)},
+ 2552.506591796875: {(93, 72)},
+ 2552.683349609375: {(71, 76)},
+ 2553.067138671875: {(82, 28)},
+ 2553.349365234375: {(80, 75)},
+ 2553.7451171875: {(58, 69)},
+ 2554.014892578125: {(90, 64)},
+ 2555.341064453125: {(85, 71)},
+ 2555.518310546875: {(91, 38)},
+ 2556.18701171875: {(76, 26)},
+ 2557.802490234375: {(84, 65)},
+ 2557.884765625: {(96, 44), (98, 39)},
+ 2558.426025390625: {(97, 43)},
+ 2559.60400390625: {(93, 65), (94, 63), (94, 70)},
+ 2559.774169921875: {(65, 73)},
+ 2559.982421875: {(98, 52)},
+ 2562.61572265625: {(64, 41)},
+ 2563.051513671875: {(90, 63)},
+ 2563.114990234375: {(90, 64)},
+ 2563.3046875: {(57, 69)},
+ 2563.468505859375: {(89, 69)},
+ 2563.47900390625: {(96, 52)},
+ 2563.762939453125: {(94, 69)},
+ 2564.046142578125: {(75, 75)},
+ 2564.81640625: {(92, 71)},
+ 2565.680908203125: {(99, 53)},
+ 2565.703369140625: {(68, 30)},
+ 2565.9892578125: {(91, 64)},
+ 2566.058349609375: {(65, 33)},
+ 2568.92822265625: {(90, 60)},
+ 2569.635009765625: {(89, 26)},
+ 2569.886474609375: {(87, 49)},
+ 2570.955078125: {(88, 56)},
+ 2571.5380859375: {(65, 28)},
+ 2574.06103515625: {(50, 40)},
+ 2574.521240234375: {(96, 70)},
+ 2574.529296875: {(85, 71)},
+ 2574.625732421875: {(78, 74)},
+ 2574.707275390625: {(89, 59)},
+ 2575.22705078125: {(79, 31)},
+ 2576.003662109375: {(71, 35)},
+ 2577.366943359375: {(98, 49)},
+ 2577.732666015625: {(95, 42)},
+ 2578.77880859375: {(82, 30)},
+ 2580.073486328125: {(92, 66)},
+ 2580.331787109375: {(90, 78)},
+ 2580.44091796875: {(89, 57)},
+ 2580.595458984375: {(85, 67), (85, 68)},
+ 2580.7763671875: {(99, 54)},
+ 2581.044189453125: {(59, 72)},
+ 2581.379638671875: {(55, 71)},
+ 2582.188720703125: {(89, 37)},
+ 2582.376953125: {(97, 55)},
+ 2583.317138671875: {(96, 55)},
+ 2583.35107421875: {(83, 63), (84, 60), (84, 72)},
+ 2583.5380859375: {(92, 34)},
+ 2584.378662109375: {(97, 40)},
+ 2584.61669921875: {(99, 59)},
+ 2584.913818359375: {(87, 32)},
+ 2585.210693359375: {(69, 27)},
+ 2585.281982421875: {(89, 34)},
+ 2588.391845703125: {(93, 63)},
+ 2594.451171875: {(95, 58), (94, 58)},
+ 2595.077880859375: {(62, 34)},
+ 2597.887939453125: {(89, 49)},
+ 2602.0703125: {(87, 67)},
+ 2606.407958984375: {(84, 33)}}
 #+end_example
 
 **** Create Images of the Output Matrices with Spotting Enabled
@@ -12174,20 +12199,20 @@ Main: {'Min': 1, 'Max': 1, 'Mean': 1.0, 'Stdev': 0.0}
 Fork: {'Min': 1, 'Max': 1, 'Mean': 1.0, 'Stdev': 0.0}
 
 Spread Rate (m/min)
-Main: {'Min': 0.16077131, 'Max': 2.2964673, 'Mean': 1.20478, 'Stdev': 0.63748336}
-Fork: {'Min': 0.16077131, 'Max': 2.2964673, 'Mean': 1.1882343, 'Stdev': 0.6302192}
+Main: {'Min': 0.16077128, 'Max': 2.2964315, 'Mean': 1.191673, 'Stdev': 0.6304963}
+Fork: {'Min': 0.16077128, 'Max': 2.2964315, 'Mean': 1.1753283, 'Stdev': 0.6232901}
 
 Spread Direction (degrees clockwise from North)
-Main: {'Min': 0.12497545, 'Max': 359.51932, 'Mean': 191.53839, 'Stdev': 117.237366}
-Fork: {'Min': 0.12497545, 'Max': 359.51932, 'Mean': 193.54515, 'Stdev': 116.56749}
+Main: {'Min': 1.0845373, 'Max': 359.45844, 'Mean': 193.19345, 'Stdev': 116.74348}
+Fork: {'Min': 1.1319, 'Max': 359.45844, 'Mean': 195.22275, 'Stdev': 116.035866}
 
 Fireline Intensity (kW/m)
-Main: {'Min': 2.277241, 'Max': 32.52825, 'Mean': 17.065073, 'Stdev': 9.029617}
-Fork: {'Min': 2.277241, 'Max': 32.52825, 'Mean': 16.830713, 'Stdev': 8.926724}
+Main: {'Min': 2.2772405, 'Max': 32.527744, 'Mean': 16.879421, 'Stdev': 8.930649}
+Fork: {'Min': 2.2772405, 'Max': 32.527744, 'Mean': 16.64791, 'Stdev': 8.828576}
 
 Flame Length (meters)
-Main: {'Min': 0.11312121, 'Max': 0.38439333, 'Mean': 0.27448973, 'Stdev': 0.073427655}
-Fork: {'Min': 0.11312121, 'Max': 0.38439333, 'Mean': 0.2727701, 'Stdev': 0.07288398}
+Main: {'Min': 0.113121204, 'Max': 0.3843906, 'Mean': 0.27317166, 'Stdev': 0.07285855}
+Fork: {'Min': 0.113121204, 'Max': 0.3843906, 'Mean': 0.27146405, 'Stdev': 0.072314404}
 
 Time of Arrival (minutes)
 Main: {'Min': 2081.852, 'Max': 2789.606, 'Mean': 2543.9004, 'Stdev': 173.16722}
