Print a warning when creating a new SpaceTimeCube requires copying the base data into a new Numpy array

--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -352,7 +352,7 @@ class SpaceTimeCube(ISpaceTimeCube):
     def __init__(self, cube_shape: tuple[int, int, int], base: object) -> cy.void:
         """
         NOTE: The resolutions in cube_shape must be exact multiples of any existing dimensions
-              in the base data.
+              in the base data. If base is not a Numpy float32 array, a new array will be allocated.
         """
         # Ensure that cube_shape contains 3 values or throw an error
         if len(cube_shape) != 3:
@@ -394,6 +394,10 @@ class SpaceTimeCube(ISpaceTimeCube):
             self.t_repetitions = divide_evenly(cube_bands, base_bands)
             self.y_repetitions = cube_rows
             self.x_repetitions = cube_cols
+            # Warn if base is not a Numpy float32 array
+            if not(isinstance(base, np.ndarray)) or (base.dtype != np.float32):
+                print("WARNING: Input data is not a Numpy float32 array. Data will be copied into SpaceTimeCube.",
+                      flush=True)
             # Expand (base_bands) -> (base_bands,1,1)
             self.data = np.expand_dims(np.asarray(base, dtype=np.float32), axis=(1,2))
 
@@ -405,6 +409,10 @@ class SpaceTimeCube(ISpaceTimeCube):
             self.t_repetitions = cube_bands
             self.y_repetitions = divide_evenly(cube_rows, base_rows)
             self.x_repetitions = divide_evenly(cube_cols, base_cols)
+            # Warn if base is not a Numpy float32 array
+            if not(isinstance(base, np.ndarray)) or (base.dtype != np.float32):
+                print("WARNING: Input data is not a Numpy float32 array. Data will be copied into SpaceTimeCube.",
+                      flush=True)
             # Expand (base_rows,base_cols) -> (1,base_rows,base_cols)
             self.data = np.expand_dims(np.asarray(base, dtype=np.float32), axis=0)
 
@@ -417,7 +425,11 @@ class SpaceTimeCube(ISpaceTimeCube):
             self.t_repetitions = divide_evenly(cube_bands, base_bands)
             self.y_repetitions = divide_evenly(cube_rows, base_rows)
             self.x_repetitions = divide_evenly(cube_cols, base_cols)
-            self.data          = np.asarray(base, dtype=np.float32)
+            # Warn if base is not a Numpy float32 array
+            if not(isinstance(base, np.ndarray)) or (base.dtype != np.float32):
+                print("WARNING: Input data is not a Numpy float32 array. Data will be copied into SpaceTimeCube.",
+                      flush=True)
+            self.data = np.asarray(base, dtype=np.float32)
 
         else:
             # 4D+: Invalid Input
@@ -1440,12 +1452,15 @@ Value from Constant Data: Foliar Moisture
 0.699999988079071 
 
 Value from Time Series Data: Spread Rate Adjustment
+WARNING: Input data is not a Numpy float32 array. Data will be copied into SpaceTimeCube.
 1.0 
 
 Value from Spatial Data: Elevation
+WARNING: Input data is not a Numpy float32 array. Data will be copied into SpaceTimeCube.
 564.0 
 
 Value from Spatio-Temporal Data: Wind Speed
+WARNING: Input data is not a Numpy float32 array. Data will be copied into SpaceTimeCube.
 32.0
 #+end_example
 
@@ -1481,12 +1496,14 @@ Time Series from Constant Data: Foliar Moisture
 [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7] 
 
 Time Series from Time Series Data: Spread Rate Adjustment
+WARNING: Input data is not a Numpy float32 array. Data will be copied into SpaceTimeCube.
 [1.   1.   0.66 0.33 0.   0.   0.   0.   0.   0.   0.   0.  ] 
 
 Time Series from Spatial Data: Elevation
 [564. 564. 564. 564. 564. 564. 564. 564. 564. 564. 564. 564.] 
 
 Time Series from Spatio-Temporal Data: Wind Speed
+WARNING: Input data is not a Numpy float32 array. Data will be copied into SpaceTimeCube.
 [32. 32. 32. 32. 32. 32. 37. 37. 37. 37. 37. 37.]
 #+end_example
 
@@ -1543,6 +1560,9 @@ Spatial Plane from Time Series Data: Spread Rate Adjustment
  [1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]] 
 
 Spatial Plane from Spatial Data: Elevation
+WARNING: Input data is not a Numpy float32 array. Data will be copied into SpaceTimeCube.
+WARNING: Input data is not a Numpy float32 array. Data will be copied into SpaceTimeCube.
+WARNING: Input data is not a Numpy float32 array. Data will be copied into SpaceTimeCube.
 [[574. 369. 544. 310. 517. 488. 565. 549. 450. 470.]
  [443. 551. 480. 476. 432. 561. 578. 361. 468. 480.]
  [520. 712. 396. 393. 584. 292. 424. 391. 494. 586.]
@@ -1555,6 +1575,9 @@ Spatial Plane from Spatial Data: Elevation
  [487. 555. 580. 492. 462. 484. 495. 396. 711. 356.]] 
 
 Spatial Plane from Spatio-Temporal Data: Wind Speed
+WARNING: Input data is not a Numpy float32 array. Data will be copied into SpaceTimeCube.
+WARNING: Input data is not a Numpy float32 array. Data will be copied into SpaceTimeCube.
+WARNING: Input data is not a Numpy float32 array. Data will be copied into SpaceTimeCube.
 [[31. 31. 31. 31. 31. 31. 31. 31. 31. 31.]
  [31. 31. 31. 31. 31. 31. 31. 31. 31. 31.]
  [31. 31. 31. 31. 31. 31. 31. 31. 31. 31.]
@@ -1665,6 +1688,9 @@ Subcube from Spatial Data: Elevation
   [487. 555. 580. 492. 462. 484. 495. 396. 711. 356.]]] 
 
 Subcube from Spatio-Temporal Data: Wind Speed
+WARNING: Input data is not a Numpy float32 array. Data will be copied into SpaceTimeCube.
+WARNING: Input data is not a Numpy float32 array. Data will be copied into SpaceTimeCube.
+WARNING: Input data is not a Numpy float32 array. Data will be copied into SpaceTimeCube.
 [[[31. 31. 31. 31. 31. 31. 31. 31. 31. 31.]
   [31. 31. 31. 31. 31. 31. 31. 31. 31. 31.]
   [31. 31. 31. 31. 31. 31. 31. 31. 31. 31.]
